--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <!-- Content -->
     <div class="container mt-4">
         <!-- Hier kommt der Inhalt deiner Seiten hin -->
+        <button id="sendPost">POST-Request senden</button>
+        <div id="postResponse"></div>
     </div>
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
