--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
         </div>
     </nav>
 
-    <!-- Content -->
     <div class="container mt-4">
         <!-- Hier kommt der Inhalt deiner Seiten hin -->
-        <button id="sendPost">POST-Request senden</button>
-        <div id="postResponse"></div>
+        <div id="postData"></div>
     </div>
+    
     
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
