--- a/index.html
+++ b/index.html
@@ -1,49 +1,36 @@
-<!DOCTYPE html>
-<html lang="de">
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
+  </head>
+  <body>
+    <span id="messageDisplay"></span>
+    <br />
+    <button type="button" id="messageButton">Click to send a message to the app</button>
+  </body>
+  <script type="text/javascript">
+    // when the button is clicked, send a message to the app
+    document.getElementById('messageButton').onclick = function() {
+      ThunkableWebviewerExtension.postMessage('hello world');
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lehrlingsangebote</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
-</head>
+    // when we get a message from the app, display it on the page
+    ThunkableWebviewerExtension.receiveMessage(function(message) {
+      document.getElementById('messageDisplay').innerHTML = message;
+    });
 
-<body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Lehrlingsangebote</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Search</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Account</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container mt-4">
-        <!-- Hier kommt der Inhalt deiner Seiten hin -->
-        <div id="postData"></div>
-        <div><button id="myButton"></button></div>
-    </div>
-    
-    
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="./scripts.js"></script>
-</body>
-
+    // when we get a message from the app that needs a return value
+    // return the string 'fast response' unless the message is
+    // 'slow message'. If the message is 'slow message', wait for
+    // four seconds, then return the string 'slow response'.
+    // The slow response shows how this could work for API calls that
+    // take time to execute.
+    ThunkableWebviewerExtension.receiveMessageWithReturnValue(function(message, callback) {
+      if (message === 'slow message') {
+        setTimeout(() => callback('slow response'), 4000);
+      } else {
+        callback('fast response');
+      }
+    });
+  </script>
 </html>
