--- a/index.html
+++ b/index.html
@@ -2,35 +2,36 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
+    <link href="https://cdn.jsdelivr.net/npm/c3@0.7.15/c3.css" rel="stylesheet">
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/c3@0.7.15/c3.min.js"></script>
   </head>
   <body>
-    <span id="messageDisplay"></span>
-    <br />
-    <button type="button" id="messageButton">Click to send a message to the app</button>
-  </body>
-  <script type="text/javascript">
-    // when the button is clicked, send a message to the app
-    document.getElementById('messageButton').onclick = function() {
-      ThunkableWebviewerExtension.postMessage('hello world');
-    }
-
-    // when we get a message from the app, display it on the page
-    ThunkableWebviewerExtension.receiveMessage(function(message) {
-      document.getElementById('messageDisplay').innerHTML = message;
-    });
-
-    // when we get a message from the app that needs a return value
-    // return the string 'fast response' unless the message is
-    // 'slow message'. If the message is 'slow message', wait for
-    // four seconds, then return the string 'slow response'.
-    // The slow response shows how this could work for API calls that
-    // take time to execute.
-    ThunkableWebviewerExtension.receiveMessageWithReturnValue(function(message, callback) {
-      if (message === 'slow message') {
-        setTimeout(() => callback('slow response'), 4000);
-      } else {
-        callback('fast response');
+    <div id="chart"></div>
+    <script>
+    var chart = c3.generate({
+      bindto: '#chart',
+      data: {
+        columns: [
+          ['data1'],
+        ]
       }
     });
-  </script>
+
+    // when we get a message from the app, display it on the page
+    // message should be a JSON string of a list of numbers
+    ThunkableWebviewerExtension.receiveMessage(function(message) {
+      try {
+        var messageList = JSON.parse(message);
+        chart.load({
+          columns: [
+            ['data1'].concat(messageList),
+          ]
+        });        
+      } catch (e) {
+        console.error("An error occurred. Message probably wasn't a JSON string of an array of numbers");
+      }
+    });
+    </script>
+  </body>
 </html>
