--- a/home.html
+++ b/home.html
@@ -5,55 +5,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disprentice - Home</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <img src="path/to/logo.png" alt="Disprentice Logo" id="logo">
+    <header class="text-center bg-dark text-white p-3">
+        <img src="path/to/logo.png" alt="Disprentice Logo" id="logo" class="mb-2">
         <h1>Disprentice</h1>
         <p>Die besten Angebote für Lehrlinge!</p>
     </header>
 
-    <section id="news-scrollview">
+    <section class="d-flex flex-row flex-nowrap overflow-auto p-3">
         <!-- Beispiel für ein Angebot -->
-        <div class="news-card" onclick="openModal('modal1')">
-            <img src="path/to/image1.jpg" alt="Angebot Bild">
-            <h2>Angebotstitel 1</h2>
+        <div class="news-card mx-2" data-toggle="modal" data-target="#modal1">
+            <img src="path/to/image1.jpg" alt="Angebot Bild" class="w-100">
+            <h2 class="mt-2">Angebotstitel 1</h2>
         </div>
-        <div class="news-card" onclick="openModal('modal2')">
-            <img src="path/to/image2.jpg" alt="Angebot Bild">
-            <h2>Angebotstitel 2</h2>
-        </div>
-        <div class="news-card" onclick="openModal('modal3')">
-            <img src="path/to/image3.jpg" alt="Angebot Bild">
-            <h2>Angebotstitel 2</h2>
-        </div>
-        <div class="news-card" onclick="openModal('modal4')">
-            <img src="path/to/image4.jpg" alt="Angebot Bild">
-            <h2>Angebotstitel 2</h2>
+        <div class="news-card mx-2" data-toggle="modal" data-target="#modal2">
+            <img src="path/to/image2.jpg" alt="Angebot Bild" class="w-100">
+            <h2 class="mt-2">Angebotstitel 2</h2>
         </div>
         <!-- Weitere Angebote hier hinzufügen -->
     </section>
 
     <!-- Modalboxen für die Angebote -->
-    <div class="modal" id="modal1">
-        <div class="modal-content">
-            <span class="close-btn" onclick="closeModal('modal1')">&times;</span>
-            <h2>Angebotstitel 1</h2>
-            <p>Kurze Beschreibung für Angebot 1...</p>
+    <div class="modal fade" id="modal1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Angebotstitel 1</h2>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Kurze Beschreibung für Angebot 1...</p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="modal" id="modal2">
-        <div class="modal-content">
-            <span class="close-btn" onclick="closeModal('modal2')">&times;</span>
-            <h2>Angebotstitel 2</h2>
-            <p>Kurze Beschreibung für Angebot 2...</p>
+    <div class="modal fade" id="modal2">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Angebotstitel 2</h2>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Kurze Beschreibung für Angebot 2...</p>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Weitere Modalboxen hier hinzufügen -->
 
-    <script src="scripts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
