--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
 </head>
 
 <body>
-    <header class="text-center bg-dark text-white p-3">
-        <img src="path/to/logo.png" alt="Disprentice Logo" id="logo" class="mb-2">
-        <h1>Disprentice</h1>
+    <header class="text-center p-3">
+        <img src="./assets/logo.PNG" alt="Disprentice Logo" id="logo" class="mb-2">
         <p>Die besten Angebote für Lehrlinge!</p>
     </header>
 
     <section class="d-flex flex-row flex-nowrap overflow-auto p-3">
         <!-- Beispiel für ein Angebot -->
         <div class="news-card mx-2" data-toggle="modal" data-target="#modal1">
-            <img src="path/to/image1.jpg" alt="Angebot Bild" class="w-100">
+            <img src="./assets/gg.jpg" alt="Angebot Bild" class="w-100">
             <h2 class="mt-2">Angebotstitel 1</h2>
         </div>
         <div class="news-card mx-2" data-toggle="modal" data-target="#modal2">
-            <img src="path/to/image2.jpg" alt="Angebot Bild" class="w-100">
+            <img src="./assets/lol.jpg" alt="Angebot Bild" class="w-100">
             <h2 class="mt-2">Angebotstitel 2</h2>
+        </div>
+        <div class="news-card mx-2" data-toggle="modal" data-target="#modal3">
+            <img src="./assets/rayan.jpg" alt="Angebot Bild" class="w-100">
+            <h2 class="mt-2">Angebotstitel 3</h2>
+        </div>
+        <div class="news-card mx-2" data-toggle="modal" data-target="#modal4">
+            <img src="./assets/reisen.jpg" alt="Angebot Bild" class="w-100">
+            <h2 class="mt-2">Angebotstitel 4</h2>
+        </div>
+        <div class="news-card mx-2" data-toggle="modal" data-target="#modal5">
+            <img src="./assets/resort.jpg" alt="Angebot Bild" class="w-100">
+            <h2 class="mt-2">Angebotstitel 5</h2>
         </div>
         <!-- Weitere Angebote hier hinzufügen -->
     </section>
@@ -52,6 +63,45 @@
                 </div>
                 <div class="modal-body">
                     <p>Kurze Beschreibung für Angebot 2...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal3">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Angebotstitel 3</h2>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Kurze Beschreibung für Angebot 3...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal4">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Angebotstitel 3</h2>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Kurze Beschreibung für Angebot 4...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal5">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Angebotstitel 5</h2>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Kurze Beschreibung für Angebot 5...</p>
                 </div>
             </div>
         </div>
