--- a/search.html
+++ b/search.html
@@ -39,6 +39,15 @@
         </div>
     </section>
 
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+        <div class="container d-flex justify-content-between">
+            <a class="navbar-brand" href="index.html">Home</a>
+            <a class="navbar-brand active" href="search.html">Search</a>
+            <a class="navbar-brand" href="user.html">User</a>
+        </div>
+    </nav>
+    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
