--- a/search.html
+++ b/search.html
@@ -35,6 +35,31 @@
                 <img src="./assets/reisen.jpg" alt="Reisen Bild" class="w-100">
                 <h2 class="mt-2 text-center">Reisen</h2>
             </div>
+            <div class="category-card mb-3">
+                <img src="./assets/gg.jpg" alt="Waffen Bild" class="w-100">
+                <h2 class="mt-2 text-center">Waffen</h2>
+            </div>
+            <div class="category-card mb-3">
+                <img src="./assets/rayan.jpg" alt="Filme Bild" class="w-100">
+                <h2 class="mt-2 text-center">Filme</h2>
+            </div>
+            <div class="category-card mb-3">
+                <img src="./assets/WIN_20230724_12_03_40_Pro.jpg" alt="Freundschaft Bild" class="w-100">
+                <h2 class="mt-2 text-center">Freundschaft</h2>
+            </div>
+            <div class="category-card mb-3">
+                <img src="./assets/WIN_20230803_10_28_05_Pro.jpg" alt="Liebe Bild" class="w-100">
+                <h2 class="mt-2 text-center">Liebe</h2>
+            </div>
+
+            <div class="category-card mb-3">
+                <img src="./assets/lol.jpg" alt="Liebe Bild" class="w-100">
+                <h2 class="mt-2 text-center">Ka</h2>
+            </div>
+            <div class="category-card mb-3">
+                <img src="./assets/resort.jpg" alt="Liebe Bild" class="w-100">
+                <h2 class="mt-2 text-center">Test</h2>
+            </div>
             <!-- Weitere Kacheln hier hinzufügen -->
         </div>
     </section>
@@ -47,6 +72,7 @@
         </div>
     </nav>
     
+    <script src="./scripts.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
